--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -11,12 +11,15 @@
 
 header {
   background-color: lightblue;
+  background-image: url(https://images.unsplash.com/photo-1631631480669-535cc43f2327?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZCUyMGltYWdlfGVufDB8fDB8fA%3D%3D&w=1000&q=80   );
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   border-style: solid;
   border-color: hotpink;
-}
+} 
 
-/*body*/
+/*body*/    
 body {
   font-family: "Franklin Gothic Medium";
   background-color: white;
@@ -27,8 +30,7 @@ body {
   padding-top: 2%;
   padding-bottom: 2%;
   border: 10px;
-  border-style: double;
-}
+  border-style: double;}
 
 .bg {
   background-color: lightblue;
@@ -67,7 +69,7 @@ p {
   text-align: center;
 }
 
-#contact-details {
+#contact-me {
   text-align: center;
 }
 
@@ -84,3 +86,8 @@ textarea {
   height: 100px;
 }
 h4, input, label, select, textarea, button{margin: 0px 0px 5px 5px;}
+
+.LinkedIn, .Twitter, .Facebook{ width: 40px;}
+.contact-me{display: flex;
+justify-content: space-around;}
+.waist-up{ size-adjust: 10px;}
