--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -8,7 +8,9 @@
   width: 200px;
   height: 200px;
 }
-
+html {border-style: double;
+  border-color: hotpink;
+border-width: 15px;}
 header {
   background-color: lightblue;
   background-image: url(https://images.unsplash.com/photo-1631631480669-535cc43f2327?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZCUyMGltYWdlfGVufDB8fDB8fA%3D%3D&w=1000&q=80   );
@@ -16,7 +18,6 @@ header {
   background-size: cover;
   text-align: center;
   border-style: solid;
-  border-color: hotpink;
 } 
 
 /*body*/    
@@ -29,15 +30,11 @@ body {
   padding-right: 2%;
   padding-top: 2%;
   padding-bottom: 2%;
-  border: 10px;
-  border-style: double;}
-
-.bg {
-  background-color: lightblue;
-}
+  background-color: lightblue;}
 
 h2 {
   background-color: hotpink;
+  border-style: solid;
 }
 
 .link {
@@ -54,6 +51,8 @@ p {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-top: 15px;
+
 }
 
 /* main content position */
@@ -80,6 +79,10 @@ form {
   width: 200px;
   
 }
+.form-border{ border-style: solid;
+position: relative;
+bottom: 19px;
+border-top-color: lightblue;}
 
 textarea {
   width: 400px;
@@ -91,3 +94,5 @@ h4, input, label, select, textarea, button{margin: 0px 0px 5px 5px;}
 .contact-me{display: flex;
 justify-content: space-around;}
 .waist-up{ size-adjust: 10px;}
+
+
