--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -8,29 +8,35 @@
   width: 200px;
   height: 200px;
 }
-html {border-style: double;
+
+html {
+  border-style: double;
   border-color: hotpink;
-border-width: 15px;}
+  border-width: 50%;
+}
+
 header {
-  background-color: lightblue;
+  background-color: hotpink;
   background-image: url(https://images.unsplash.com/photo-1631631480669-535cc43f2327?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YmFja2dyb3VuZCUyMGltYWdlfGVufDB8fDB8fA%3D%3D&w=1000&q=80   );
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
   border-style: solid;
-} 
+}
 
-/*body*/    
+/*body*/
 body {
   font-family: "Franklin Gothic Medium";
-  background-color: white;
   margin-left: 20px;
   margin-right: 20px;
   padding-left: 2%;
   padding-right: 2%;
   padding-top: 2%;
   padding-bottom: 2%;
-  background-color: lightblue;}
+  background-color: lightblue
+}
+
+
 
 h2 {
   background-color: hotpink;
@@ -50,14 +56,21 @@ p {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  margin-top: 15px;
 
+  justify-content: space-around;
+  background-color: rgb(149, 201, 219);
+  padding: 10px;
+}
+
+nav {
+  position: sticky;
+  top: 2px;
 }
 
 /* main content position */
 #education {
   text-align: center;
+  margin: 0px;
 }
 
 #experience {
@@ -76,23 +89,71 @@ p {
 form {
   display: flex;
   flex-direction: column;
-  width: 200px;
-  
+  width: 50%;
+
 }
-.form-border{ border-style: solid;
-position: relative;
-bottom: 19px;
-border-top-color: lightblue;}
+/* form border */
+.form-border {
+  border-style: solid;
+  position: relative;
+  bottom: 19px;
+  border-top-color: lightblue;
+}
 
 textarea {
-  width: 400px;
+  width: 50%;
   height: 100px;
 }
-h4, input, label, select, textarea, button{margin: 0px 0px 5px 5px;}
 
-.LinkedIn, .Twitter, .Facebook{ width: 40px;}
-.contact-me{display: flex;
-justify-content: space-around;}
-.waist-up{ size-adjust: 10px;}
+h4,
+input,
+label,
+select,
+textarea,
+button {
+  margin: 0px 0px 5px 5px;
+}
 
+.LinkedIn,
+.Twitter,
+.Facebook {
+  width: 40px;
+}
 
+.contact-me {
+  display: flex;
+  justify-content: space-around;
+}
+
+.waist-up {
+  size-adjust: 10px;
+}
+
+@media screen and (max-width: 525px) {
+  body {
+    font-family: "Franklin Gothic Medium";
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: lightblue;
+    font-size: 7vw;
+  }
+}
+@media screen and (max-width: 875px) {
+  body {
+    font-family: "Franklin Gothic Medium";
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: lightblue;
+    font-size: 3vw;
+    flex-wrap: wrap;
+  }
+
+}
