--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -12,7 +12,12 @@
 html {
   border-style: double;
   border-color: hotpink;
+  border-top-width: 12px;
+  border-left-width: 12px;
+  border-right-width: 12px;
+  border-bottom-width: 12px;
   border-width: 50%;
+
 }
 
 header {
@@ -92,6 +97,7 @@ form {
   width: 50%;
 
 }
+
 /* form border */
 .form-border {
   border-style: solid;
@@ -116,8 +122,9 @@ button {
 
 .LinkedIn,
 .Twitter,
-.Facebook {
-  width: 40px;
+.Facebook, 
+.GitHub{
+  width: 25%;
 }
 
 .contact-me {
@@ -132,28 +139,40 @@ button {
 @media screen and (max-width: 525px) {
   body {
     font-family: "Franklin Gothic Medium";
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     background-color: lightblue;
     font-size: 7vw;
   }
+  .LinkedIn,
+  .Twitter,
+  .Facebook, 
+  .GitHub{
+    width: 40%;
+  }
 }
+
 @media screen and (max-width: 875px) {
   body {
     font-family: "Franklin Gothic Medium";
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
     background-color: lightblue;
     font-size: 3vw;
     flex-wrap: wrap;
   }
-
+  .LinkedIn,
+  .Twitter,
+  .Facebook, 
+  .GitHub{
+    width: 30%;
+  }
 }
